# koala

./: README.md  pyproject.toml  roadmap.md
docs/: frame-semantics-data.md
koala/: agent.py  cli.py  websvc.py
koala/preprocess/: frames.py  prepare.py
notebooks/: Untitled.ipynb
